# boring-gemini

./: .boring.toml  .boring_transaction  .boring_tutorial.json  .circuit_breaker_history  .circuit_breaker_state  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  NOTICE  PROMPT.md  PYPI.md  README.md  README_zh.md  RELEASE_NOTES.md  RELEASE_NOTES_V11.2.2.md  RELEASE_NOTES_V11.2.2_zh.md  RELEASE_NOTES_v11.2.12.md  SECURITY.md  UV_GUIDE.md  bandit-report.json  collection_report.txt  gemini-extension.json  health_report.txt  help.txt  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  (+15 more)
.agent/templates/: adr-template.md
.agent/workflows/: release-prep.md  speckit-analyze.md  speckit-constitution.md
.boring_brain/rubrics/: code_quality.json
.boring_cache/: verification.json
.gemini/: settings.json
.gemini/commands/: criticalthink.toml  speckit.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  maintainer_application.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: dependabot-auto-merge.yml  docs.yml  publish.yml  quality-gates.yml  test.yml
ARCHITECTURE/: index.html
ARCHITECTURE_zh/: index.html
CHEATSHEET/: index.html
CHEATSHEET_zh/: index.html
PERFECTION_ROADMAP/: index.html
PERFECTION_ROADMAP_zh/: index.html
adr/: index.html
adr/ADR-0001-mcp-protocol/: index.html
adr/ADR-0002-hybrid-rag/: index.html
adr/ADR-0003-shadow-mode/: index.html
adr/ADR-0004-sustainability-strategy/: index.html
adr/ADR-0005-ghost-feature-cleanup/: index.html
adr/ADR-0006-documentation-integrity/: index.html
adr/template/: index.html
api/agents/: index.html
api/agents_zh/: index.html
api/circuit/: index.html
api/core/: index.html
api/core_zh/: index.html
api/gemini_client/: index.html
api/hooks_zh/: index.html
api/index_zh/: index.html
api/intelligence_zh/: index.html
api/judge_zh/: index.html
api/loop_zh/: index.html
api/mcp_server/: index.html
api/mcp_server_zh/: index.html
api/rag/: index.html
api/rag_zh/: index.html
api/resources_zh/: index.html
api/security_zh/: index.html
api/speckit_zh/: index.html
api/tools_zh/: index.html
api/utils_zh/: index.html
api/verification/: index.html
api/vibe_zh/: index.html
boring-speckit/: package-lock.json
changelog/v10/: index.html
changelog/v10_zh/: index.html
changelog/v11/: index.html
changelog/v11_zh/: index.html
changelog/v12/: index.html
changelog/v12_zh/: index.html
changelog/v13/: index.html
changelog/v13_zh/: index.html
changelog/v14/: index.html
changelog/v14.1/: index.html
changelog/v14.1_zh/: index.html
changelog/v14.8/: index.html
changelog/v14.8_zh/: index.html
changelog/v14_zh/: index.html
changelog/v15.0/: index.html
design/error_translator_design/: index.html
design/refactoring-plan/: index.html
design/refactoring-structure-v2/: index.html
design/tutorial_system/: index.html
docs/: ADVANCED_TUTORIAL.md  ADVANCED_TUTORIAL_zh.md  APPENDIX_A_TOOL_REFERENCE.md  APPENDIX_A_TOOL_REFERENCE_zh.md  APPENDIX_B_FAQ.md  APPENDIX_C_PROMPT_PHILOSOPHY_zh.md  ARCHITECTURE.md  ARCHITECTURE_zh.md  CHEATSHEET.md  CHEATSHEET_zh.md  PERFECTION_ROADMAP.md  PERFECTION_ROADMAP_zh.md  PRACTICAL_DEMO.md  PRACTICAL_DEMO_en.md  PROFESSIONAL_PLAYBOOK.md  PROFESSIONAL_PLAYBOOK_en.md  TUTORIAL.md  TUTORIAL_en.md  architect_mode.md  architect_mode_zh.md  environment_variables.md  index.md  offline_mode_guide.md
docs/adr/: ADR-0001-mcp-protocol.md  ADR-0002-hybrid-rag.md  ADR-0003-shadow-mode.md  ADR-0004-sustainability-strategy.md  ADR-0005-ghost-feature-cleanup.md  ADR-0006-documentation-integrity.md  README.md  template.md
docs/api/: agents.md  agents_zh.md  circuit.md  core.md  core_zh.md  gemini_client.md  hooks_zh.md  index_zh.md  intelligence_zh.md  judge_zh.md  loop_zh.md  mcp_server.md  mcp_server_zh.md  rag.md  rag_zh.md  resources_zh.md  security_zh.md  speckit.md  speckit_zh.md  tools_zh.md  utils_zh.md  verification.md  vibe_zh.md
docs/changelog/: v10.md  v10_zh.md  v11.md  v11_zh.md  v12.md  v12_zh.md  v13.md  v13_zh.md  v14.1.md  v14.1_zh.md  v14.8.md  v14.8_zh.md  v14.md  v14_zh.md  v15.0.md
docs/design/: error_translator_design.md  refactoring-plan.md  refactoring-structure-v2.md  tutorial_system.md
docs/features/: adaptive-profile.md  adaptive-profile_zh.md  agents.md  agents_zh.md  anomaly-safety.md  anomaly-safety_zh.md  clean.md  clean_zh.md  cognitive.md  cognitive_zh.md  external-intelligence.md  external-intelligence_zh.md  flow.md  flow_zh.md  global-brain.md  global-brain_zh.md  hidden-gems.md  hidden-gems_zh.md  mcp-tools.md  mcp-tools_zh.md  memory.md  memory_zh.md  monitor.md  monitor_zh.md  nodejs.md  nodejs_zh.md  offline-mode.md  offline-mode_zh.md  performance.md  performance_zh.md  predictive.md  predictive_zh.md  quality-gates.md  quality-gates_zh.md  rag.md  rag_zh.md  shadow-mode.md  shadow-mode_zh.md  token-optimization.md  token-optimization_zh.md  (+4 more)
docs/getting-started/: installation.md  quickstart.md
environment_variables/: index.html
examples/: basic_loop.py  function_calling_demo.py  summarize_project.py  vector_memory_demo.py
offline_mode_guide/: index.html
openspec/: project.md
prompts/: coding_standards.md  reasoning_framework.md  search_tips.md  testing_guide.md
scripts/: benchmark_startup.py  check_doc_tool_consistency.py  count_tools.py  diagnose_wizard.py  generate_sbom.py  install.ps1  install.sh  optimize_startup.py  quality-check.ps1  quality-check.sh  quality_gate.py  test_ecosystem.py  test_error_translator.py  validate_i18n.py  verify_mcp_tools.py  verify_token_savings.py  verify_version.py
search/: search_index.json
skills/: mastered_skills.md
src/: .boring_tutorial.json
tests/: test_core.py  test_response_analyzer.py  verify_mcp_renaissance_v2.py  verify_mcp_renaissance_v3.py
(+801 files in other folders)
