[project]
name = "boring-gemini"
version = "4.1.0"
description = "Autonomous AI development loop with Function Calling, Diff Patching, Vector Memory, and Advanced Verification."
authors = [
    { name = "Boring206", email = "C112156246@nkust.edu.tw" }
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["gemini", "ai", "autonomous-agent", "devops"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv",
    "google-generativeai>=0.8.0",  # Pure Python Gemini SDK
    "python-dateutil",
    "gitpython",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "mcp>=1.0.0",
]

[project.scripts]
boring = "boring.main:app"
boring-monitor = "boring.monitor:app"
boring-setup = "boring.setup:setup_app"
boring-import = "boring.setup:import_app"
boring-mcp = "boring.mcp_server:main"

[project.urls]
Homepage = "https://github.com/Boring206/boring-gemini"
Repository = "https://github.com/Boring206/boring-gemini"
"Bug Tracker" = "https://github.com/Boring206/boring-gemini/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["boring*"]

[tool.setuptools.package-data]
boring = ["templates/*"]

# Ruff linter configuration
[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["B011"]  # Allow assert in tests

# Mypy type checker configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

