[project]
name = "boring"
version = "10.10.0"
description = "Enterprise-grade autonomous AI development agent with Pure CLI Mode, RAG Memory, Multi-Agent Orchestration, and Architect-Level Code Review."
authors = [
    { name = "Boring206", email = "C112156246@nkust.edu.tw" }
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["gemini", "ai", "autonomous-agent", "devops"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv",
    "google-genai>=1.0.0",
    "python-dateutil",
    "gitpython",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
    "duckduckgo-search>=5.0.0",
    "tree-sitter-languages>=1.10.0",
]

[project.optional-dependencies]
gui = [
    "streamlit>=1.30.0",
    "pyarrow",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-python-dateutil",
    "mkdocs>=1.5.0",
    "mkdocstrings[python]>=0.24.0",
]
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
mcp = [
    "fastmcp>=2.0.0",
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "win10toast>=0.9; platform_system=='Windows'",
]
all = [
    "boring[gui,dev,vector,mcp]",
]

[project.scripts]
boring = "boring.main:app"
boring-monitor = "boring.monitor:app"
boring-setup = "boring.setup:setup_app"
boring-import = "boring.setup:import_app"
boring-mcp = "boring.mcp.server:run_server"
boring-dashboard = "boring.dashboard:run_app"

[project.urls]
Homepage = "https://github.com/Boring206/boring-gemini"
Repository = "https://github.com/Boring206/boring-gemini"
"Bug Tracker" = "https://github.com/Boring206/boring-gemini/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["boring*"]

[tool.setuptools.package-data]
boring = ["templates/**/*", "templates/workflows/*", "templates/specs/*"]

# Ruff linter configuration
[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["B011"]  # Allow assert in tests

# Mypy type checker configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--cov=boring",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=40",  # Temporary: lowered to 40% while adding tests
]

# Coverage configuration
[tool.coverage.run]
source = ["src/boring"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# Smithery configuration for MCP server deployment
[tool.smithery]
server = "boring.mcp.server:create_server"
